--- a/about/index.html
+++ b/about/index.html
@@ -21,10 +21,10 @@
 
     <nav class="tag-text">
         <a href="../home/index.html" class="home">Home</a>
-        <a href="../about/index.html" class="about">About</a>
+        <a href="index.html" class="about">About</a>
         <a href="../hobby/index.html" class="hobby">Hobby</a>
         <a href="../game/index.html" class="game">Game</a>
-        <a href="index.html" class="contact">Contact</a>
+        <a href="../contact/index.html" class="contact">Contact</a>
     </nav>
 
     <div class="tag-icon">
