--- a/home/index.html
+++ b/home/index.html
@@ -1,24 +1,39 @@
 <!DOCTYPE html>
 <html>
-<link rel="icon"
-    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🪄</text></svg>">
 
-    
 <head>
-    <title>🎃✨Benjamin' s website🪄💖🎹♟️🎩🎃♠️♣️♥️♦️🎼📸💻</title>
+    <meta charset="UTF-8">
+    <link rel="icon" href="../! Assets/logo.ico" type="image/x-icon">
+    <title>BenjiKuo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
+<header class="topbar">
+    <div class="name">
+        <img src="../! Assets/logo.png" alt="Logo">
+        <a href="../home/index.html">BenjaminKuo</a>
+    </div>
 
+    <div class="search-bar">
+        <span class="search-icon">🔍</span>
+        <input type="search-text" placeholder="Search ...">
+    </div>
 
-<body>
-    <h1>My First Heading</h1>
-    <p>My first paragraph.</p>
-</body>
+    <nav class="tag-text">
+        <a href="index.html" class="home">Home</a>
+        <a href="../about/index.html" class="about">About</a>
+        <a href="../hobby/index.html" class="hobby">Hobby</a>
+        <a href="../game/index.html" class="game">Game</a>
+        <a href="../contact/index.html" class="contact">Contact</a>
+    </nav>
+
+    <div class="tag-icon">
+        <span id="toggle-theme" style="cursor:pointer;">🌙</span>
+        <span>🙋🏼‍♂️</span> <!--👾🙋🏼‍♂️🐱🐶-->
+        <span>🌐</span>
+    </div>
+
+    <div class="small-display">⚙️</div>
+</header>
 
 </html>
-
-
-
-
-
-
