--- a/exercise6.html
+++ b/exercise6.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Repo2 Website</title>
+  <title>Table Example</title>
+  <style>
+    table, th, td {
+      border: 1px solid black;   /* 邊框 */
+      border-collapse: collapse; /* 邊框合併 */
+      padding: 8px;              /* 內距 */
+      text-align: center;        /* 置中 */
+    }
+  </style>
 </head>
 <body>
-  <h1>Hello from Repo2!</h1>
-  <p>This is my second website using GitHub Pages.</p>
+
+<table>
+  <tr>
+    <th>Name</th>
+    <th>Student ID</th>
+  </tr>
+  <tr>
+    <td>Benjamin Kuo 郭昀漢</td>
+    <td>s1133523</td>
+  </tr>
+</table>
+
 </body>
 </html>
