--- a/exercise6.html
+++ b/exercise6.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8">
   <title>Table Example</title>
   <style>
-    table, th, td {
-      border: 1px solid black;   /* 邊框 */
-      border-collapse: collapse; /* 邊框合併 */
-      padding: 8px;              /* 內距 */
-      text-align: center;        /* 置中 */
+    table {
+      border-collapse: collapse;
+      width: 50%;
+    }
+    th, td {
+      border: 1px solid black;
+      padding: 5px;
+      text-align: left;
     }
   </style>
 </head>
