--- a/exercise9.html
+++ b/exercise9.html
@@ -4,15 +4,15 @@
         <form>
             <lable> First name: </lable>
             <br>
-            <input type="text" value="Your first name">
+            <input type="text" value="Benjamin">
             <br> <br>
             <lable> Last name: </lable>
             <br>
-            <input type="text" value="Your last name">
+            <input type="text" value="Kuo">
             <br> <br>
             <lable> Student ID: </lable>
             <br>
-            <input type="text" value="Your student ID">
+            <input type="text" value="s1133523">
             <br> <br>
             <input type="submit" value="Submit">
             <input type="reset">
