--- a/exercise16.html
+++ b/exercise16.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8">
     <title>Exercise 16</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            padding: 40px;
-        }
 
         .container {
             display: flex;
@@ -20,10 +16,7 @@
             height: 100px;
             background-color: pink;
             position: relative;
-            justify-content: center;
-            align-items: center;
-            font-size: 24px;
-            transition: all 0.4s ease;
+            transition: all 0.4s;
         }
 
         #box1:hover {
