add pedding and font

--- a/exercise16.html
+++ b/exercise16.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Exercise 16</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            padding: 40px;
+        }
 
         .container {
             display: flex;
@@ -16,6 +20,7 @@
             height: 100px;
             background-color: pink;
             position: relative;
+            font-size: 24px;
             transition: all 0.4s;
         }
 
